# browser-verifier

./: README.md
rust/: Cargo.toml
rust/guest/: Cargo.toml
rust/guest/fibonacci/: Cargo.toml
rust/guest/fibonacci/src/: main.rs
rust/host/: Cargo.toml
rust/host/src/: main.rs
rust/verifier/: index.html
wasm_verifier/: Cargo.toml
wasm_verifier/src/: OLD_LIB_RS.bak  OLD_MAIN_RS.bak  lib.rs
web/: package-lock.json  package.json
web/app/: page.tsx
web/components/: js-code-block.tsx  rust-code-block.tsx  tabbed-code-block.tsx
web/pkg/: verifier.js
web/public/wasm/pkg/: verifier.d.ts
web_old/: index.html
web_old/pkg/: verifier_bg.wasm  verifier_bg.wasm.d.ts
zkvm_fibonacci/host/: Cargo.toml
zkvm_fibonacci/host/src/: main.rs
zkvm_fibonacci/methods/guest/: Cargo.toml
zkvm_fibonacci/methods/guest/src/: main.rs
